--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "impactjs",
   "version": "1.0.0",
   "description": "impactjs using node as server",
-  "main": "game/server.js",
+  "main": "src/server.js",
   "directories": {
     "lib": "lib"
   },
@@ -17,9 +17,9 @@
     "nodemon": "^1.17.4"
   },
   "scripts": {
-    "start": "nodemon ./game/server.js",
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
